[package]
name = "api-optel"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "OpenTelemetry Protocol (OTLP) gRPC services for zradar"

[dependencies]
zradar-models = { path = "../../core/zradar-models" }
zradar-policy = { path = "../../core/zradar-policy" }
zradar-traits = { path = "../../core/zradar-traits" }

# ✅ OpenTelemetry Protocol - THE CONTRACT
# This is the ONLY source of truth for OTLP types
opentelemetry-proto = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

# HTTP (OTLP/HTTP receiver on :4318)
axum = { workspace = true }
bytes = { workspace = true }
tower-http = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

# OQ15 zero-copy invariant test gates on `--features count-allocations`.
# `allocation-counter` swaps in a custom global allocator, so it stays opt-in
# and is never linked into the production binary or the default `cargo test`
# run. See `tests/oq15_zero_copy.rs`.
#
# Cargo requires optional deps to live in `[dependencies]` (not
# `[dev-dependencies]`); the feature gate keeps it out of normal builds.
allocation-counter = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tower = { workspace = true }

[features]
# Enable the OQ15 zero-copy invariant test. Activates the custom global
# allocator that counts allocations on the current thread.
count-allocations = ["dep:allocation-counter"]

[[bench]]
name = "converter_bench"
harness = false
