[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "zradar REST API - control plane business logic and HTTP handlers"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Web framework & API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Auto-documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Internal dependencies
zradar-models = { path = "../../core/zradar-models" }
zradar-traits = { path = "../../core/zradar-traits", features = ["utoipa"] }
zradar-retention = { path = "../../core/zradar-retention" }
zradar-policy = { path = "../../core/zradar-policy" }

