[project]
name = "zradar-example-google-adk"
version = "0.1.0"
description = "Google ADK exchange-rate agent with zradar OpenTelemetry instrumentation"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
# Uncomment to pin to a specific index if needed:
# index-url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
