[project]
name = "zradar-openai-agents-example"
version = "0.1.0"
description = "OpenAI Agents SDK example for zradar observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.7",
    "openai>=1.50",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[tool.uv]
package = false
