[project]
name = "zradar-example-openai"
version = "0.1.0"
description = "zradar observability example: raw OpenAI SDK tool-calling loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[project.scripts]
run-agent = "agent:run_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
